[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuboid_house_rl"
version = "0.1.0"
description = "RL agent for building cuboid houses in Minecraft via CraftGround"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "gymnasium>=0.29",
    "wandb>=0.16",
]

[tool.setuptools.packages.find]
include = ["cuboid_house_rl*"]
